Projeto/Compilador/tests/cases/error/T30.pas
program T30;
var x: integer;
begin
  x := length(10);
end.
